--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -98,7 +98,7 @@ p {
 }
 
 footer p {
-  color: #f2f2f2;
+  color: #000;
 }
 
 a {
@@ -360,7 +360,7 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  rgba(256,256,256,0.50);
+  background:rgba(256,256,256,0.50);
 }
 
 
