--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -121,7 +121,7 @@ a {
 a:hover, a:focus {text-decoration: underline;}
 
 footer a {
-  color: #F2F2F2;
+  color: #000;
   text-decoration: underline;
 }
 
