--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,7 +51,7 @@ Theme Styles
 body {
   box-sizing: border-box;
   color:#373737;
-  background: #212121;
+  background: #B2CDE3;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -98,7 +98,7 @@ p {
 }
 
 footer p {
-  color: #f2f2f2;
+  color: #000;
 }
 
 a {
@@ -121,7 +121,7 @@ a {
 a:hover, a:focus {text-decoration: underline;}
 
 footer a {
-  color: #F2F2F2;
+  color: #000;
   text-decoration: underline;
 }
 
@@ -287,12 +287,7 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: rgba(0,0,0,0.50);
 }
 
 #header_wrap .inner {
@@ -355,9 +350,9 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #f2f2f2;
+  /*background: #f2f2f2;
   border-top: 1px solid #111;
-  border-bottom: 1px solid #111;
+  border-bottom: 1px solid #111;*/
 }
 
 #main_content {
@@ -365,7 +360,7 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  background: #212121;
+  background:rgba(256,256,256,0.50);
 }
 
 
