--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -47,6 +47,13 @@ table {
 /*******************************************************************************
 Theme Styles
 *******************************************************************************/
+#logo_perso
+{
+	max-height: 50px;
+	position: absolute;
+	top: 0;
+	left: 10px;
+}
 
 body {
   box-sizing: border-box;
